Fri Mar  8 19:44:00 2013  Akinori MUSHA  <knu@iDaemons.org>

	* man/rake.1, man/ruby.1: Use the Pa macro to make URLs stand out.

Fri Mar  8 13:20:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/pathname/pathname.c (path_f_pathname): rdoc for Pathname()

Fri Mar  8 12:00:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* man/rake.1: Document ENVIRONMENT variables on RAKE(1) manpage

Fri Mar  8 10:44:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/webrick/httpproxy.rb: Fix typos in HTTPProxyServer [Bug #8013]
	  Patch by Nobuhiro IMAI [ruby-core:53127]

Fri Mar  8 03:16:15 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* class.c (rb_mod_ancestors): Include singleton_class in ancestors
	  list [Feature #8035]

	* test/ruby/test_module.rb (class): test for above

	* test/ruby/marshaltestlib.rb (module): adapt test

	* NEWS: list change

Thu Mar  7 14:21:37 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): pass keyword arguments to zsuper,
	  with current values.  [ruby-core:53114] [Bug #8008]

Thu Mar  7 12:53:47 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/setup_command.rb:  Install .pem files.
	* test/rubygems/test_gem_commands_setup_command.rb:  Test for the
	  above.

	* lib/rubygems/spec_fetcher.rb:  Test HTTPS upgrade with URI::HTTPS,
	  not URI::HTTP.  Fixes bug in automatic HTTPS upgrade.
	* test/rubygems/test_gem_spec_fetcher.rb:  Test for the above.

	* lib/rubygems.rb:  Version 2.0.2

	* lib/rubygems/test_utilities.rb:  Ensure scheme and uri class match.

Thu Mar  7 10:39:04 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (gem): Gem.ensure_gem_subdirectories now has mode
	  option since r39607.  refix of r38870.

Wed Mar  6 13:14:28 2013  Eric Hodel  <drbrain@segment7.net>

	* test/rubygems/test_gem_spec_fetcher.rb:  Removed unused variable.

Wed Mar  6 08:10:15 2013  Eric Hodel  <drbrain@segment7.net>
